--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Broadway</title>
     <link href="/Users/Fiona/Documents/Projects/Broadway/css/style.css" type="text/css" rel="stylesheet" />
   </head>
+
   <body>
     <div class="heading">
       <h1>Broadway Design</h1>
@@ -28,18 +29,27 @@
       <p>We study our projects inside and out.</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" >
       <h3>Execute</h3>
-
-
-
-
+      <p>We put everything we have into our work.</p>
     </div>
 
     <div class="design">
-
+     <h3 id="newyork">Designed in New York</h3>
+     <h3>Portfolio</h3>
+     <p>Coming Soon</p>
+     <h3>Team</h3>
+     <p>We're Hiring!</p>
+     <h3>Contact</h3>
+     <p>Phone: (555)-555-555 <br>Email: test@example.com <br>Twitter: @test</p>
     </div>
 
     <div class="copyright">
-
+      <p>&copy Broadway 2017
+        <a href="#">Home </a>
+        <a href="#">About </a>
+        <a href="#">Work </a>
+        <a href="#">Team </a>
+        <a href="#">Contact </a>
+      </p>
     </div>
 
   </body>
