Fix link pathway

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link href="/Users/Fiona/Documents/Projects/Broadway/css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
 
   <body>
