--- a/index.html
+++ b/index.html
@@ -7,6 +7,57 @@
   </head>
 
   <body>
+    <div class="banner">
+      <h1>Broadway Design</h1>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#process">Process</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+    <div id="process">
+      <h2 >Our Process</h2>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+
+    <h3 class="design">Designed in New York</h3>
+
+    <div id="work">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </div>
+
+    <div id="team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+
+    <div id="contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+
+    <div class="copyright">
+      <p>© Broadway 2016
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a></p>
+    </div>
 
   </body>
 </html>
